# MeshIO

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  classmeshio_1_1Vec2.html  classmeshio_1_1Vec2.js  classmeshio_1_1Vec3.html  classmeshio_1_1Vec3.js  classmeshio_1_1Vec4.html  classmeshio_1_1Vec4.js  classmeshio_1_1stl_1_1Data.html  classmeshio_1_1stl_1_1Data.js  cube_binary.stl  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  doxygen.css  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemeshio.html  namespacemeshio.js  namespacemeshio_1_1stl.html  namespacemeshio_1_1stl.js  namespaces.html  namespaces_dup.js  navtreedata.js  (+7 more)
.github/: ISSUE_TEMPLATE.md
CMakeModules/: build_gtest.cmake
cmake/: MeshIOConfig.cmake.in  meshioBuildType.cmake  meshioChecks.cmake
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/meshio/: index-sort-f.html  index-sort-l.html  index.html  stl.hpp.func-sort-c.html  stl.hpp.func.html  stl.hpp.gcov.html  vectors.hpp.func-sort-c.html  vectors.hpp.func.html  vectors.hpp.gcov.html
coverage/meshio/details/: index-sort-f.html  index-sort-l.html  index.html  stl.inl.func-sort-c.html  stl.inl.func.html  stl.inl.gcov.html
docs/: CMakeLists.txt  doxygen.mk
docs/pages/: README.md
include/meshio/: meshio_defines.hpp  stl.hpp  stl.inl  vectors.hpp
include/meshio/details/: stl.inl
resources/: Body_Bird_Binary.stl  cube_ascii.stl
src/: meshio_defines.hpp  stl.hpp
test/: CMakeLists.txt  initialize_reference_objs.inl  stl.cpp  stl_read_test.cpp  testHelpers.hpp
