CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)

PROJECT(MeshIO)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")

OPTION(BUILD_EXAMPLES "Build examples" OFF)
OPTION(BUILD_TESTS "Build Tests" ON)
OPTION(USE_SYSTEM_GTEST "Use GTEST from system libraries" OFF)
OPTION(USE_RELATIVE_TEST_DIR "Use relative paths for the test data directory(For continious integration(CI) purposes only)" OFF)

IF(UNIX)
    IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    ELSEIF("${CMAKE_CXX_COMPILER_VERSION}" VERSION_LESS 4.7)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
    ELSE()
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    ENDIF()
ENDIF()

IF(BUILD_EXAMPLES)
	ADD_SUBDIRECTORY(examples)
ENDIF()

IF(BUILD_TESTS)
	ADD_SUBDIRECTORY(test)
ENDIF()

## Following commented out changes work only on CMAKE version >=3.0
#ADD_LIBRARY(MeshIO INTERFACE)
#TARGET_INCLUDE_DIRECTORIES(MeshIO INTERFACE
#			$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
#			$<INSTALL_INTERFACE:include/meshio>
#			)

#INSTALL(TARGETS MeshIO EXPORT meshioExport)
#INSTALL(EXPORT meshioExport NAMESPACE Upstream::
#		DESTINATION lib/cmake/MeshIO
#		)

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include"
		DESTINATION .
		COMPONENT Headers
		FILES_MATCHING
		PATTERN "*.hpp"
		)
