FIND_PACKAGE(Doxygen REQUIRED)

# Documentation
IF(NOT DEFINED MESHIO_INSTALL_DOC_DIR)
    SET(MESHIO_INSTALL_DOC_DIR "${CMAKE_INSTALL_PREFIX}/doc" CACHE PATH "Installation path for documentation")
ENDIF()

SET(MESHIO_DOCS_CONFIG "${CMAKE_CURRENT_SOURCE_DIR}/doxygen.mk")
SET(MESHIO_DOCS_CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/doxygen.mk.out")

SET(MESHIO_DOCS_LAYOUT "${CMAKE_CURRENT_SOURCE_DIR}/layout.xml")
SET(MESHIO_DOCS_LAYOUT_OUT "${CMAKE_CURRENT_BINARY_DIR}/layout.xml.out")

SET(DOCS_DIR     "${CMAKE_CURRENT_SOURCE_DIR}")
SET(ASSETS_DIR   "${CMAKE_CURRENT_SOURCE_DIR}/resources")
SET(INCLUDE_DIR  "${PROJECT_SOURCE_DIR}/include")
#SET(EXAMPLES_DIR "${PROJECT_SOURCE_DIR}/examples")
#Re-enable test snippets directory setting when doc examples are added
#SET(SNIPPETS_DIR "${PROJECT_SOURCE_DIR}/test")
CONFIGURE_FILE(${MESHIO_DOCS_CONFIG} ${MESHIO_DOCS_CONFIG_OUT})
CONFIGURE_FILE(${MESHIO_DOCS_LAYOUT} ${MESHIO_DOCS_LAYOUT_OUT})

ADD_CUSTOM_TARGET(docs
    ALL
    COMMAND ${DOXYGEN_EXECUTABLE} ${MESHIO_DOCS_CONFIG_OUT}
    COMMAND cmake -E copy_directory ${ASSETS_DIR} ${CMAKE_CURRENT_BINARY_DIR}/html
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating Documentation"
    VERBATIM)

# Install Doxygen documentation
INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
    DESTINATION ${MESHIO_INSTALL_DOC_DIR}
    COMPONENT documentation
    PATTERN "*"
    PATTERN ".git" EXCLUDE
    PATTERN "CMakeFiles" EXCLUDE
    PATTERN "man" EXCLUDE
    )

