find_package(Doxygen REQUIRED)

set(MESHIO_DOCS_CONFIG "${CMAKE_CURRENT_SOURCE_DIR}/doxygen.mk")
set(MESHIO_DOCS_CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/doxygen.mk.out")

set(MESHIO_DOCS_LAYOUT "${CMAKE_CURRENT_SOURCE_DIR}/layout.xml")
set(MESHIO_DOCS_LAYOUT_OUT "${CMAKE_CURRENT_BINARY_DIR}/layout.xml.out")

set(DOCS_DIR     "${CMAKE_CURRENT_SOURCE_DIR}")
set(ASSETS_DIR   "${PROJECT_SOURCE_DIR}/resources")
set(INCLUDE_DIR  "${PROJECT_SOURCE_DIR}/include")
set(EXAMPLES_DIR "${PROJECT_SOURCE_DIR}/examples")
set(SNIPPETS_DIR "${PROJECT_SOURCE_DIR}/test")

configure_file(${MESHIO_DOCS_CONFIG} ${MESHIO_DOCS_CONFIG_OUT})
configure_file(${MESHIO_DOCS_LAYOUT} ${MESHIO_DOCS_LAYOUT_OUT})

add_custom_target(docs
  ALL
  COMMAND ${DOXYGEN_EXECUTABLE} ${MESHIO_DOCS_CONFIG_OUT}
  COMMAND cmake -E copy_directory ${ASSETS_DIR} ${CMAKE_CURRENT_BINARY_DIR}/html
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  COMMENT "Generating Documentation"
  VERBATIM)

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
  DESTINATION docs
  COMPONENT documentation
  PATTERN "*"
  PATTERN ".git" EXCLUDE
  PATTERN "CMakeFiles" EXCLUDE
  PATTERN "man" EXCLUDE
  )
